--- a/javierMontesinos/clase1/index.html
+++ b/javierMontesinos/clase1/index.html
@@ -6,12 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Ejercicio 1</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="ejercicio1.js"></script>
     </head>
     <body>
         <div><strong>Ejercicio 1:</strong><p>Hacer un programa en JavaScript donde usted va a comparar el numero de cedula con el digito mas alto y bajo</p></div>
+	<div><a href="ejercicio2.html">Ejercicio 2</a></div>
     </body>
 </html>
