ejercicio corregido bucle while

--- a/lanrysGil/ejercicio2.html
+++ b/lanrysGil/ejercicio2.html
@@ -12,6 +12,6 @@ and open the template in the editor.
         <script src="ejercicio2.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>Ejercicio 2</div>
     </body>
 </html>
